--- a/package.json
+++ b/package.json
@@ -32,17 +32,19 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
+    "@angular-devkit/build-angular": "^0.800.4",
     "@angular/cli": "~7.3.3",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
     "@types/jest": "^24.0.11",
     "@types/node": "~8.9.4",
+    "braces": "^3.0.2",
     "codelyzer": "~4.5.0",
     "express-mock-server": "^2.1.1",
     "jest": "^24.3.1",
     "jest-html-reporters": "^1.1.2",
     "jest-preset-angular": "^7.0.1",
+    "morgan": "^1.9.1",
     "protractor": "~5.4.0",
     "ts-jest": "^24.0.2",
     "ts-node": "~7.0.0",
