--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jest-preset-angular": "^7.0.1",
     "morgan": "^1.9.1",
     "protractor": "~5.4.0",
+    "shelljs": "^0.8.3",
     "ts-jest": "^24.0.2",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
